📝 실습 업데이트

--- a/javascript/Day01/01/소개.html
+++ b/javascript/Day01/01/소개.html
@@ -6,9 +6,22 @@
     <title>자바스크립트 소개</title>
 </head>
 <body>
+    <p>대한민국의 역습</p>
+    <p class="comment">손흥민이 몰고간다. 크로스~</p>
+    <p calss="comment" id="nogoal">조규성은 골을 넣지 못했다...</p>
     
 </body>
-<script src="소개.js">
+<script>
+    //입력, 처리, 출력
+    const p =document.querySelector('p');
+    console.log(p.textContent);
+    p.textContent = '사실은 꿈이었다.';
+    const p2 =document.querySelector('.comment')
+    console.log(p2.textContent);
+    p2.textContent = "아무것도 아니지롱";
+    const p3 = document.querySelector('#nogoal')
+    console.log(p3.textContent)
+    p3.textContent = '골을 넣긴 했다 자책골';   
 
 </script>
 </html>
