📝 비교연산 실습

--- a/javascript/Day01/02/비교연산.html
+++ b/javascript/Day01/02/비교연산.html
@@ -9,6 +9,9 @@
     <script>
         let age = parseInt(prompt("나이 입력하세요"))
         console.log(age>20)
+        console.log(age =='20')
+        console.log(age==='20')
+        
     </script>
 </body>
 </html>
