--- a/html/project/Kream.html
+++ b/html/project/Kream.html
@@ -12,11 +12,7 @@
     <div class="position-absolute top-0 start-50 translate-middle-x mt-1 text-center">
         <span id="currentTime" class="fw-bold"></span>
     </div>
-    <!-- 회원가입 버튼-->
-    <div class="m-auto">
-        
-    </div>
-    <!-- 테마 설정 버튼 -->
+    <!-- 회원가입 및 테마 설정 버튼 -->
     <div class="position-absolute top-0 end-0 mt-1">
         <a href="joinForm.html"><button class="btn justify-content-end">회원가입</button></a>
         <button class="btn btn-light" id="lightTheme">light</button>
@@ -78,57 +74,7 @@
     </nav>
 </div>
 
-<script>
-    // 현재 시간 업데이트 함수
-    const updateTime = () => {
-        const now = new Date();
-        const formattedTime = now.toLocaleTimeString('ko-KR', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
-        document.getElementById('currentTime').textContent = `${formattedTime}`;
-    };
-
-    // 1초마다 시간 업데이트
-    setInterval(updateTime, 1000);
-    updateTime();
-
-    // 제품 데이터
-    const product_data = [
-        { category: "상의", brand: 'Supreme', product: '슈프림 박스로고 후드티', price: '390,000' },
-        { category: "하의", brand: 'DIESEL', product: '디젤 트랙 팬츠', price: '188,000' },
-        { category: "신발", brand: 'Nike', product: '에어포스 1', price: '137,000' },
-        { category: "패션잡화", brand: 'Music&Goods', product: '빵빵이 키링', price: '29,000' },
-    ];
-
-    // 제품 테이블에 데이터 추가
-    const product_data_Table = document.getElementById('product_data_Table');
-    product_data.forEach((item) => {
-        const row = product_data_Table.insertRow();
-        row.insertCell(0).innerHTML = item.category;
-        row.insertCell(1).innerHTML = item.brand;
-        row.insertCell(2).innerHTML = item.product;
-        row.insertCell(3).innerHTML = item.price;
-    });
-
-    // 테마 설정 로직
-    const setTheme = (theme) => {
-        if (theme === 'auto') {
-            document.documentElement.setAttribute(
-                'data-bs-theme',
-                window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'
-            );
-        } else {
-            document.documentElement.setAttribute('data-bs-theme', theme);
-        }
-        localStorage.setItem('theme', theme);
-    };
-
-    // 저장된 테마 로드
-    const storedTheme = localStorage.getItem('theme') || 'auto';
-    setTheme(storedTheme);
-
-    // 버튼 클릭 이벤트
-    document.getElementById('lightTheme').addEventListener('click', () => setTheme('light'));
-    document.getElementById('darkTheme').addEventListener('click', () => setTheme('dark'));
-</script>
+<script src="project.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
