--- a/html/project/hello.html
+++ b/html/project/hello.html
@@ -50,6 +50,7 @@
                 </tr>
             </tbody>
         </table>
+        <button onclick="window.location.href='Kream.html'">메인 화면</button>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
